--- a/.tekton/urllib3-pull-request.yaml
+++ b/.tekton/urllib3-pull-request.yaml
@@ -29,6 +29,8 @@ spec:
     value: 5d
   - name: dockerfile
     value: Containerfile
+  - name: hermetic
+    value: "true"
   pipelineRef:
     name: build
   taskRunTemplate: {}
