--- a/.tekton/urllib3-pull-request.yaml
+++ b/.tekton/urllib3-pull-request.yaml
@@ -31,6 +31,13 @@ spec:
     value: Containerfile
   - name: hermetic
     value: "true"
+  - name: prefetch-input
+    value: |
+      {
+        "type": "pip",
+        "path": "./packages/urllib3",
+        "allow_binary": "false"
+      }
   pipelineRef:
     name: build
   taskRunTemplate: {}
