Make Containerfile package agnostic
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/.tekton/urllib3-pull-request.yaml
+++ b/.tekton/urllib3-pull-request.yaml
@@ -27,8 +27,12 @@ spec:
     value: quay.io/redhat-user-workloads/lucarval-tenant/urllib3:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
+  - name: path-context
+    value: packages/urllib3
   - name: dockerfile
     value: Containerfile
+  - name: build-args-file
+    value: packages/urllib3/argfile.conf
   - name: hermetic
     value: "true"
   - name: prefetch-input
