--- a/.tekton/jinja2-pull-request.yaml
+++ b/.tekton/jinja2-pull-request.yaml
@@ -4,18 +4,19 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/lcarva/calunga?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
+    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
-    pipelinesascode.tekton.dev/cancel-in-progress: "false"
+    pipelinesascode.tekton.dev/cancel-in-progress: "true"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
-    pipelinesascode.tekton.dev/on-event: "[push]"
+    pipelinesascode.tekton.dev/on-event: "[pull_request]"
     pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/Jinja2/**]"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: calunga
-    appstudio.openshift.io/component: Jinja2
+    appstudio.openshift.io/component: jinja2
     pipelines.appstudio.openshift.io/type: build
-  name: Jinja2-on-push
+  name: jinja2-on-pull-request
   namespace: lucarval-tenant
 spec:
   params:
@@ -24,7 +25,9 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/lucarval-tenant/Jinja2:{{revision}}
+    value: quay.io/redhat-user-workloads/lucarval-tenant/jinja2:on-pr-{{revision}}
+  - name: image-expires-after
+    value: 5d
   - name: path-context
     value: packages/Jinja2
   - name: dockerfile
