--- a/.tekton/jinja2-push.yaml
+++ b/.tekton/jinja2-push.yaml
@@ -4,19 +4,18 @@ metadata:
   annotations:
     build.appstudio.openshift.io/repo: https://github.com/lcarva/calunga?rev={{revision}}
     build.appstudio.redhat.com/commit_sha: '{{revision}}'
-    build.appstudio.redhat.com/pull_request_number: '{{pull_request_number}}'
     build.appstudio.redhat.com/target_branch: '{{target_branch}}'
-    pipelinesascode.tekton.dev/cancel-in-progress: "true"
+    pipelinesascode.tekton.dev/cancel-in-progress: "false"
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
-    pipelinesascode.tekton.dev/on-event: "[pull_request]"
+    pipelinesascode.tekton.dev/on-event: "[push]"
     pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/Jinja2/**]"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: calunga
-    appstudio.openshift.io/component: Jinja2
+    appstudio.openshift.io/component: jinja2
     pipelines.appstudio.openshift.io/type: build
-  name: Jinja2-on-pull-request
+  name: jinja2-on-push
   namespace: lucarval-tenant
 spec:
   params:
@@ -25,9 +24,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/lucarval-tenant/Jinja2:on-pr-{{revision}}
-  - name: image-expires-after
-    value: 5d
+    value: quay.io/redhat-user-workloads/lucarval-tenant/jinja2:{{revision}}
   - name: path-context
     value: packages/Jinja2
   - name: dockerfile
