--- a/.tekton/jinja2-pull-request.yaml
+++ b/.tekton/jinja2-pull-request.yaml
@@ -10,7 +10,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
     pipelinesascode.tekton.dev/on-event: "[pull_request]"
-    pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/Jinja2/**]"
+    pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/jinja2/**]"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: calunga
@@ -29,18 +29,18 @@ spec:
   - name: image-expires-after
     value: 5d
   - name: path-context
-    value: packages/Jinja2
+    value: packages/jinja2
   - name: dockerfile
     value: Containerfile
   - name: build-args-file
-    value: packages/Jinja2/argfile.conf
+    value: packages/jinja2/argfile.conf
   - name: hermetic
     value: "true"
   - name: prefetch-input
     value: |
       {
         "type": "pip",
-        "path": "./packages/Jinja2",
+        "path": "./packages/jinja2",
         "allow_binary": "false"
       }
   pipelineRef:
