--- a/.tekton/jinja2-push.yaml
+++ b/.tekton/jinja2-push.yaml
@@ -9,7 +9,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
     pipelinesascode.tekton.dev/on-event: "[push]"
-    pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/Jinja2/**]"
+    pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/jinja2/**]"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: calunga
@@ -26,18 +26,18 @@ spec:
   - name: output-image
     value: quay.io/redhat-user-workloads/lucarval-tenant/jinja2:{{revision}}
   - name: path-context
-    value: packages/Jinja2
+    value: packages/jinja2
   - name: dockerfile
     value: Containerfile
   - name: build-args-file
-    value: packages/Jinja2/argfile.conf
+    value: packages/jinja2/argfile.conf
   - name: hermetic
     value: "true"
   - name: prefetch-input
     value: |
       {
         "type": "pip",
-        "path": "./packages/Jinja2",
+        "path": "./packages/jinja2",
         "allow_binary": "false"
       }
   pipelineRef:
