--- a/.tekton/on-pull-request.yaml.template
+++ b/.tekton/on-pull-request.yaml.template
@@ -14,9 +14,9 @@ metadata:
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: calunga
-    appstudio.openshift.io/component: ${k8s_name}
+    appstudio.openshift.io/component: ${name}
     pipelines.appstudio.openshift.io/type: build
-  name: ${k8s_name}-on-pull-request
+  name: ${name}-on-pull-request
   namespace: lucarval-tenant
 spec:
   params:
@@ -25,7 +25,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/lucarval-tenant/${k8s_name}:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/lucarval-tenant/${name}:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: path-context
