Allow custom Containerfile per package
If a Containefile is provided under `packages/name` directory, then
configure the build pipeline to use that. Otherwise, use the shared one
at the root of repository.

Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/.tekton/on-push.yaml.template
+++ b/.tekton/on-push.yaml.template
@@ -29,7 +29,7 @@ spec:
   - name: path-context
     value: packages/${name}
   - name: dockerfile
-    value: Containerfile
+    value: ${containerfile}
   - name: build-args-file
     value: packages/${name}/argfile.conf
   - name: hermetic
