--- a/konflux/numpy/set-package-name.yaml
+++ b/konflux/numpy/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: numpy
 spec:
   image:
-    name: lucarval-tenant/numpy
+    name: calunga-tenant/numpy
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: numpy
 spec:
   componentName: numpy
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/numpy
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/numpy
