--- a/konflux/pathspec/set-package-name.yaml
+++ b/konflux/pathspec/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: pathspec
 spec:
   image:
-    name: lucarval-tenant/pathspec
+    name: calunga-tenant/pathspec
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: pathspec
 spec:
   componentName: pathspec
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/pathspec
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/pathspec
