--- a/.tekton/on-pull-request.yaml.template
+++ b/.tekton/on-pull-request.yaml.template
@@ -18,7 +18,7 @@ metadata:
     appstudio.openshift.io/component: ${name}
     pipelines.appstudio.openshift.io/type: build
   name: ${name}-on-pull-request
-  namespace: lucarval-tenant
+  namespace: calunga-tenant
 spec:
   params:
   - name: git-url
@@ -26,7 +26,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/lucarval-tenant/${name}:on-pr-{{revision}}
+    value: quay.io/redhat-user-workloads/calunga-tenant/${name}:on-pr-{{revision}}
   - name: image-expires-after
     value: 5d
   - name: path-context
