--- a/.tekton/on-push.yaml.template
+++ b/.tekton/on-push.yaml.template
@@ -17,7 +17,7 @@ metadata:
     appstudio.openshift.io/component: ${name}
     pipelines.appstudio.openshift.io/type: build
   name: ${name}-on-push
-  namespace: lucarval-tenant
+  namespace: calunga-tenant
 spec:
   params:
   - name: git-url
@@ -25,7 +25,7 @@ spec:
   - name: revision
     value: '{{revision}}'
   - name: output-image
-    value: quay.io/redhat-user-workloads/lucarval-tenant/${name}:{{revision}}
+    value: quay.io/redhat-user-workloads/calunga-tenant/${name}:{{revision}}
   - name: path-context
     value: packages/${name}
   - name: dockerfile
