--- a/konflux/black/set-package-name.yaml
+++ b/konflux/black/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: black
 spec:
   image:
-    name: lucarval-tenant/black
+    name: calunga-tenant/black
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: black
 spec:
   componentName: black
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/black
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/black
