--- a/konflux/click/set-package-name.yaml
+++ b/konflux/click/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: click
 spec:
   image:
-    name: lucarval-tenant/click
+    name: calunga-tenant/click
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: click
 spec:
   componentName: click
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/click
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/click
