--- a/konflux/django/set-package-name.yaml
+++ b/konflux/django/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: django
 spec:
   image:
-    name: lucarval-tenant/django
+    name: calunga-tenant/django
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: django
 spec:
   componentName: django
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/django
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/django
