--- a/konflux/docutils/set-package-name.yaml
+++ b/konflux/docutils/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: docutils
 spec:
   image:
-    name: lucarval-tenant/docutils
+    name: calunga-tenant/docutils
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: docutils
 spec:
   componentName: docutils
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/docutils
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/docutils
