--- a/konflux/idna/set-package-name.yaml
+++ b/konflux/idna/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: idna
 spec:
   image:
-    name: lucarval-tenant/idna
+    name: calunga-tenant/idna
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: idna
 spec:
   componentName: idna
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/idna
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/idna
