--- a/konflux/loguru/set-package-name.yaml
+++ b/konflux/loguru/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: loguru
 spec:
   image:
-    name: lucarval-tenant/loguru
+    name: calunga-tenant/loguru
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: loguru
 spec:
   componentName: loguru
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/loguru
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/loguru
