--- a/konflux/pytest/set-package-name.yaml
+++ b/konflux/pytest/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: pytest
 spec:
   image:
-    name: lucarval-tenant/pytest
+    name: calunga-tenant/pytest
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: pytest
 spec:
   componentName: pytest
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/pytest
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/pytest
