--- a/konflux/tomlkit/set-package-name.yaml
+++ b/konflux/tomlkit/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: tomlkit
 spec:
   image:
-    name: lucarval-tenant/tomlkit
+    name: calunga-tenant/tomlkit
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: tomlkit
 spec:
   componentName: tomlkit
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/tomlkit
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/tomlkit
