--- a/konflux/tox/set-package-name.yaml
+++ b/konflux/tox/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: tox
 spec:
   image:
-    name: lucarval-tenant/tox
+    name: calunga-tenant/tox
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: tox
 spec:
   componentName: tox
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/tox
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/tox
