--- a/konflux/wheel/set-package-name.yaml
+++ b/konflux/wheel/set-package-name.yaml
@@ -7,7 +7,7 @@ metadata:
   name: wheel
 spec:
   image:
-    name: lucarval-tenant/wheel
+    name: calunga-tenant/wheel
 
 ---
 apiVersion: appstudio.redhat.com/v1alpha1
@@ -16,4 +16,4 @@ metadata:
   name: wheel
 spec:
   componentName: wheel
-  containerImage: quay.io/redhat-user-workloads/lucarval-tenant/wheel
+  containerImage: quay.io/redhat-user-workloads/calunga-tenant/wheel
