--- a/packages/arrow/requirements-build.txt
+++ b/packages/arrow/requirements-build.txt
@@ -8,6 +8,7 @@ flit-core==3.12.0 \
     --hash=sha256:18f63100d6f94385c6ed57a72073443e1a71a4acb4339491615d0f16d6ff01b2 \
     --hash=sha256:e7a0304069ea895172e3c7bb703292e992c5d1555dd1233ab7b5621b5b69e62c
     # via
+    #   arrow
     #   packaging
     #   typing-extensions
     #   wheel
@@ -35,3 +36,4 @@ setuptools==80.9.0 \
     # via
     #   python-dateutil
     #   setuptools-scm
+    #   types-python-dateutil
