--- a/konflux/base/component.yaml
+++ b/konflux/base/component.yaml
@@ -1,6 +1,9 @@
 apiVersion: appstudio.redhat.com/v1alpha1
 kind: Component
 metadata:
+  annotations:
+    # Prevents the onboarding pipeline from being created when the component is created.
+    build.appstudio.openshift.io/status: '{"message":"done"}'
   name: package-name
 spec:
   application: calunga
