Onboard pyproject-api package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/kustomization.yaml
+++ b/konflux/kustomization.yaml
@@ -42,6 +42,7 @@ resources:
   - pluggy
   - prompt-toolkit
   - pygments
+  - pyproject-api
   - pyproject-metadata
   - pytest
   - python-dateutil
