Onboard types-python-dateutil package
Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/konflux/kustomization.yaml
+++ b/konflux/kustomization.yaml
@@ -61,6 +61,7 @@ resources:
   - tqdm
   - trove-classifiers
   - types-psutil
+  - types-python-dateutil
   - types-setuptools
   - typing-extensions
   - urllib3
