--- a/.tekton/on-push.yaml.template
+++ b/.tekton/on-push.yaml.template
@@ -10,7 +10,7 @@ metadata:
     pipelinesascode.tekton.dev/max-keep-runs: "3"
     pipelinesascode.tekton.dev/on-target-branch: "[main]"
     pipelinesascode.tekton.dev/on-event: "[push]"
-    pipelinesascode.tekton.dev/on-path-change: "[Containerfile, packages/${name}/**]"
+    pipelinesascode.tekton.dev/on-path-change: "[packages/${name}/**]"
   creationTimestamp: null
   labels:
     appstudio.openshift.io/application: calunga
