Revert "Use recommended annotation to avoid onboarding"
This reverts commit ebc48199bc6528b19f9e5aabf8d2d1c1619e8d82.

This actually trigger re-onboarding of everything!

--- a/konflux/base/component.yaml
+++ b/konflux/base/component.yaml
@@ -3,7 +3,7 @@ kind: Component
 metadata:
   annotations:
     # Prevents the onboarding pipeline from being created when the component is created.
-    metadata.annotations.build.appstudio.openshift.io/request: configure-pac-no-mr
+    build.appstudio.openshift.io/status: '{"message":"done"}'
   name: package-name
 spec:
   application: calunga
