--- a/konflux/release/releaseplanadmission.yaml
+++ b/konflux/release/releaseplanadmission.yaml
@@ -18,7 +18,7 @@ spec:
         - name: url
           value: 'https://github.com/lcarva/calunga.git'
         - name: revision
-          value: add-konflux-release
+          value: main
         - name: pathInRepo
           value: release/pipeline.yaml
       resolver: git
