Fix task references in the release pipeline
It should use the `push-py-pulp` Task from the `main` branch of this
repository now that the changes are merged.

Signed-off-by: Luiz Carvalho <lucarval@redhat.com>

--- a/release/pipeline.yaml
+++ b/release/pipeline.yaml
@@ -223,7 +223,7 @@ spec:
           - name: url
             value: https://github.com/lcarva/calunga.git
           - name: revision
-            value: add-konflux-release
+            value: main
           - name: pathInRepo
             value: release/push-py-pulp-task.yaml
       params:
