--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -34,6 +34,7 @@ jobs:
       - name: Create package directory and generate files
         run: |
           # Install python dependencies
+          python -m pip install --upgrade pip
           python -m pip install pip-tools pybuild-deps
 
           mkdir "packages/${{ steps.extract.outputs.package_name }}"
