--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -34,7 +34,7 @@ jobs:
       - name: Create package directory and generate files
         run: |
           # Install python dependencies
-          python -m pip install --upgrade pip
+          python -m pip install --upgrade "pip==23.3.2"
           python -m pip install pip-tools pybuild-deps
 
           # Debug information
