--- a/.github/ISSUE_TEMPLATE/on-board-package.yaml
+++ b/.github/ISSUE_TEMPLATE/on-board-package.yaml
@@ -4,3 +4,11 @@ description: >
   Request that a new python package is added to this repository so Calunga will build it
   from source and publish it on its python index.
 title: "Onboard package: [PACKAGE_NAME]"
+body:
+- type: input
+  id: package
+  attributes:
+    label: Package name
+    description: Name of the package to add
+  validations:
+    required: true
