Add verification checkboxes to on-board-package.yaml

--- a/.github/ISSUE_TEMPLATE/on-board-package.yaml
+++ b/.github/ISSUE_TEMPLATE/on-board-package.yaml
@@ -12,3 +12,19 @@ body:
     description: Name of the package to add
   validations:
     required: true
+- type: textarea
+  id: reason
+  attributes:
+    label: Reason
+    description: Why do you want to add this package?
+  validations:
+    required: true
+- type: checkboxes
+  attributes:
+    id: verified
+    label: Verification
+    description: >
+      By submitting this issue, you agree to have verified the package is legitimate.
+    options:
+    - label: I agree
+      required: true
