--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -38,7 +38,9 @@ jobs:
         run: |
           # Install python dependencies
           python -m pip install --upgrade "pip==23.3.2"
-          python -m pip install pip-tools pybuild-deps
+          python -m pip install pip-tools
+          # Workaround to https://github.com/hermetoproject/pybuild-deps/issues/304
+          pip install -e git+https://github.com/lcarva/pybuild-deps.git@handle-no-resolver#egg=pybuild_deps
 
           # Debug information
           echo "Python version:"
