--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -26,11 +26,12 @@ jobs:
           echo "Extracted package name: $PKG_NAME"
 
       - name: Run OpenSSF Scorecard
-        uses: docker://gcr.io/openssf/scorecard:stable
-        env:
-          GITHUB_AUTH_TOKEN: ${{ github.token }}
-        with:
-          args: --pypi ${{ steps.extract.outputs.package_name }} > results.txt
+        run: |
+           docker run --rm \
+             -e GITHUB_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }} \
+             -v ${{ github.workspace }}:/repo \
+             gcr.io/openssf/scorecard:stable \
+             --pypi PyGithub > results.txt
 
       - name: Post Scorecard Results
         uses: actions/github-script@v7
