--- a/.github/workflows/package-onboarding.yaml
+++ b/.github/workflows/package-onboarding.yaml
@@ -26,24 +26,26 @@ jobs:
           echo "Extracted package name: $PKG_NAME"
 
       - name: Run OpenSSF Scorecard
+        id: scorecard
         run: |
-           docker run --rm \
-             -e GITHUB_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }} \
-             -v ${{ github.workspace }}:/repo \
-             gcr.io/openssf/scorecard:stable \
-             --pypi PyGithub > results.txt
+          RESULTS="$(docker run --rm \
+            -e GITHUB_AUTH_TOKEN=${{ secrets.GITHUB_TOKEN }} \
+            -v ${{ github.workspace }}:/repo \
+            gcr.io/openssf/scorecard:stable \
+            --pypi ${{ steps.extract.outputs.package_name }})"
+          echo "results<<EOF" >> $GITHUB_OUTPUT
+          echo "$RESULTS" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
       - name: Post Scorecard Results
         uses: actions/github-script@v7
         with:
           script: |
-            const fs = require('fs');
-            const results = fs.readFileSync('results.txt', 'utf8');
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `## OpenSSF Scorecard Results\n\n\`\`\`\n${results}\n\`\`\``
+              body: `## OpenSSF Scorecard Results\n\n\`\`\`\n${{ steps.scorecard.outputs.results }}\n\`\`\``
             });
 
   onboard-package:
